force-app/main/default/objects/conference360__Table__c/conference360__Table__c.object-meta.xml
<CustomObject>
    <label>Table</label>
    <nameField>
        <displayFormat>TBL-{000000}</displayFormat>
        <label>Table Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>