force-app/main/default/objects/conference360__Table__c/fields/conference360__Main_Contact_Attendee__c.field-meta.xml
<CustomField>
    <fullName>conference360__Main_Contact_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The main point of contact for this Table.</description>
    <inlineHelpText>The main point of contact for this Table.</inlineHelpText>
    <label>Main Contact (Attendee)</label>
    <referenceTo>conference360__Attendee__c</referenceTo>
    <relationshipLabel>Tables</relationshipLabel>
    <relationshipName>Tables</relationshipName>
    <type>Lookup</type>
</CustomField>