force-app/main/default/objects/conference360__Table__c/fields/conference360__Seats_Assigned__c.field-meta.xml
<CustomField>
    <fullName>conference360__Seats_Assigned__c</fullName>
    <description>The number of seats assigned for the related Table, set and updated automatically when creating and updating Seats.</description>
    <inlineHelpText>The number of seats assigned for the related Table, set and updated automatically when creating and updating Seats.</inlineHelpText>
    <label>Seats Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>