force-app/main/default/objects/conference360__Table__c/fields/conference360__Seats_Available__c.field-meta.xml
<CustomField>
    <fullName>conference360__Seats_Available__c</fullName>
    <description>The number of seats available for the related Table, set and updated automatically.</description>
    <inlineHelpText>The number of seats available for the related Table, set and updated automatically.</inlineHelpText>
    <label>Seats Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>