force-app/main/default/objects/conference360__Table__c/fields/conference360__Table_Name__c.field-meta.xml
<CustomField>
    <fullName>conference360__Table_Name__c</fullName>
    <description>The name of this table, if you use table names for your event, such as &quot;Marc Benioff&apos;s VIP Table&quot;.</description>
    <inlineHelpText>The name of this table, if you use table names for your event, such as &quot;Marc Benioff&apos;s VIP Table&quot;.</inlineHelpText>
    <label>Table Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>