force-app/main/default/objects/conference360__Table__c/fields/conference360__Table_Number__c.field-meta.xml
<CustomField>
    <fullName>conference360__Table_Number__c</fullName>
    <description>If you use table numbers for your event, enter the number of the table here.</description>
    <inlineHelpText>If you use table numbers for your event, enter the number of the table here.</inlineHelpText>
    <label>Table Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>