force-app/main/default/objects/conference360__Table__c/fields/conference360__Total_Seats__c.field-meta.xml
<CustomField>
    <fullName>conference360__Total_Seats__c</fullName>
    <description>The total number of Seats at this Table.</description>
    <inlineHelpText>The total number of Seats at this Table.</inlineHelpText>
    <label>Total Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>